# CRoaring

./: meson.build
include-workaround-meson/roaring/: meson.build
